# hyprbar

./: .gitignore  README.md  main.cpp  meson.build
src/: Hyprbar.cpp  Hyprbar.hpp  IPC.cpp  IPC.hpp  Modules.cpp  Modules.hpp  json.hpp  main.cpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/elements/: ActiveWindow.cpp  ActiveWindow.hpp  Battery.cpp  Battery.hpp  Clock.cpp  Clock.hpp  IModule.hpp  Workspaces.cpp  Workspaces.hpp  clock.cpp  clock.hpp  workspaces.cpp  workspaces.hpp
src/helpers/: Memory.hpp
